--- a/editor.html
+++ b/editor.html
@@ -141,7 +141,7 @@
                     <div id="resize-bottom" class="resize" style="cursor: ns-resize; right: 10; bottom: -10; left: 10; height: 30px"></div>
                     <div id="resize-bottomleft" class="resize" style="cursor: nesw-resize; bottom: -10; left: -10; height: 30px; width: 30px"></div>
                     <div id="resize-left" class="resize" style="cursor: ew-resize; bottom: 10; left: -10; top: 10; width: 30px"></div>
-                    <svg id="puzzle" style="z-index: 10"></svg>
+                    <svg id="puzzle"></svg>
                   </div>
                 </div>
               </div>
@@ -232,6 +232,21 @@
                 <li>
                   <h2>Line (Success)</h2>
                   <input onchange="changeColor(this.id, this.value)" type="color" id="line-success-color" value="#ffffff" />
+                </li>
+                <li>
+                  <h2>Background Image</h2>
+                  <input onchange="changeImage(this.id, this.value)" type="text" id="background-image-input"/>
+                </li>
+                <li>
+                  <h2>Foreground Image</h2>
+                  <input onchange="changeImage(this.id, this.value)" type="text" id="foreground-image-input"/>
+                </li>
+                <li>
+                  <h2>Foreground change requires a refresh!</h2>
+                </li>
+                <li>
+                  <button id="export-theme" onpointerdown="exportTheme()">Export to Clipboard</button>
+                  <button id="import-theme" onpointerdown="importTheme()">Import from Clipboard</button>
                 </li>
                 </ul>
             </div>
