--- a/editor.html
+++ b/editor.html
@@ -149,12 +149,12 @@
               <table id="colorButtons" style="padding: 5px; display:none" cellpadding="4" cellspacing="0">
                 <tr>
                   <td><button id="black"></button></td>
-                  <td><button id="rgba(0, 0, 0, 0.5)"></button></td>
-                  <td><button id="rgba(0, 0, 0, 0)"></button></td>
+                  <td><button id="#00000080"></button></td>
+                  <td><button id="#00000000"></button></td>
                 </tr>
                 <tr>
                   <td><button id="white"></button></td>
-                  <td><button id="rgba(255, 255, 255, 0.5)"></button></td>
+                  <td><button id="#ffffff80"></button></td>
                   <td><button id="#cccccc"></button></td>
                 </tr>
                 <tr>
