oh yeah, its all coming together

--- a/editor.html
+++ b/editor.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/2000/xhtml">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="The Witness - Alternative Dots Extension Pack, extended by prod">
+    <meta name="description" content="Looksy - Modded Witness Editor">
     <meta name="author" content="prod">
     <meta name="robots" content="nosnippet"/>
     <link rel="stylesheet" type="text/css" href="./data/reset.css" id="stylesheet">
@@ -17,7 +17,7 @@
     <script async type="text/javascript" src="./engine/display2.js"></script>
     <script async type="text/javascript" src="./engine/trace2.js"></script>
     <script async type="text/javascript" src="./editor.js"></script>
-    <title>Create a puzzle</title>
+    <title>Looksy v2.1.0</title>
   </head>
   <body>
     <div class="wrapper">
