all the work is done

--- a/editor.html
+++ b/editor.html
@@ -17,7 +17,7 @@
     <script async type="text/javascript" src="./engine/display2.js"></script>
     <script async type="text/javascript" src="./engine/trace2.js"></script>
     <script async type="text/javascript" src="./editor.js"></script>
-    <title>Looksy v2.1.0</title>
+    <title>Looksy Editor v2.1.0</title>
   </head>
   <body>
     <div class="wrapper">
