main screen visual fix

--- a/editor.html
+++ b/editor.html
@@ -191,6 +191,7 @@
             <div>
               <script>addSolveButtons()</script>
               <button id="save" onpointerdown="exportPuzzle()" disabled>Get URL</button>
+              <a href="https://prodzpod.github.io/witness/merge.html"><button>Merge Levels</button></a>
             </div>
             <div class="theme">
               <h1>Theme Setting</h1>
