--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script async type="text/javascript" src="./engine/display2.js"></script>
     <script async type="text/javascript" src="./engine/trace2.js"></script>
     <script async type="text/javascript" src="./index.js"></script>
-    <title>Looksy</title>
+    <title>Focus, Look closely...</title>
   </head>
   <body>
     <div class="wrapper">
