--- a/editor.html
+++ b/editor.html
@@ -190,7 +190,7 @@
             </div>
             <div>
               <script>addSolveButtons()</script>
-              <button id="save" onpointerdown="exportPuzzle()" disabled>Get URL</button>
+              <button id="save" onpointerdown="exportPuzzle()">Get URL</button>
               <a href="https://prodzpod.github.io/witness/merge.html"><button>Merge Levels</button></a>
             </div>
             <div class="theme">
