--- a/play.html
+++ b/play.html
@@ -45,6 +45,7 @@
       <div class="main-wrapper">
         <div class="main vlist">
             <div class="spacer"></div>
+            <div class="hlist" id="solsWrapper"></div>
             <div class="hlist">
               <button class="nav" onclick="getPrev()" id="prev"><i class="xi-angle-left"></i></button>
               <div class="puzzlebox-wrapper">
