--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
       <footer class="noselect">
-        <pre class="footer-text">Funny Looksy, prodzpod 2021</pre>
+        <pre class="footer-text">Funny Looksy, prodzpod 2021-2022</pre>
         <a href="https://github.com/prodzpod/witness" class="footer-button" title="Source Code"><i class="xi-github"></i></a>
         <pre>
 BSD 3-Clause License
