fix: symmetry lines being ignored on validation

--- a/editor.html
+++ b/editor.html
@@ -62,6 +62,7 @@
               <option>Horizontal Symmetry</option>
               <option>Vertical Symmetry</option>
               <option>Rotational Symmetry</option>
+              <option>Two Lines</option>
               <option>Pillar</option>
               <option>Pillar (H Symmetry)</option>
               <option>Pillar (V Symmetry)</option>
