--- a/editor.html
+++ b/editor.html
@@ -90,76 +90,92 @@
             <div class="spacer"></div>
           </div>
           <div class="hlist editor-screen">
-            <table id="symbolButtons" style="padding: 5px; display:none" cellpadding="4" cellspacing="0">
-              <tr>
-                <td><button id="start"></button></td>
-                <td><button id="end"></button></td>
-                <td><button id="gap"></button></td>
-                <td id="x-fakebutton">
-                  <div id="x-fakewrapper">
-                    <div id="x-fakesvg"></div>
-                    <table>
-                      <tr>
-                        <td><button id="x-lu"></button></td>
-                        <td><button id="x-ru"></button></td>
-                      </tr>
-                      <tr>
-                        <td><button id="x-ld"></button></td>
-                        <td><button id="x-rd"></button></td>
-                      </tr>
-                    </table>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td><button id="dot"></button></td>
-                <td><button id="cross"></button></td>
-                <td><button id="curve"></button></td>
-                <td><button id="dots"></button></td>
-              </tr>
-              <tr>
-                <td><button id="square"></button></td>
-                <td><button id="star"></button></td>
-                <td><button id="pentagon"></button></td>
-                <td><button id="swirl"></button></td>
-              </tr>
-              <tr>
-                <td><button id="triangle"></button></td>
-                <td><button id="arrow"></button></td>
-                <td><button id="dart"></button></td>
-                <td><button id="eye"></button></td>
-              </tr>
-              <tr>
-                <td><button id="atriangle"></button></td>
-                <td><button id="vtriangle"></button></td>
-                <td><button id="blackhole"></button></td>
-                <td><button id="whitehole"></button></td>
-              </tr>
-              <tr>
-                <td><button id="divdiamond"></button></td>
-                <td><button id="pokerchip"></button></td>
-                <td><button id="crystal"></button></td>
-                <td><button id="bridge"></button></td>
-              </tr>
-              <tr>
-                <td><button id="scaler"></button></td>
-                <td><button id="dice"></button></td>
-                <td><button id="sizer"></button></td>
-                <td><button id="twobytwo"></button></td>
-              </tr>
-              <tr>
-                <td><button id="poly"></button></td>
-                <td><button id="ylop"></button></td>
-                <td><button id="xvmino"></button></td>
-                <td><button id="polynt"></button></td>
-              </tr>
-              <tr>
-                <td><button id="nega" disabled></button></td>
-                <td><button id="copier" disabled></button></td>
-                <td><button id="portal"></button></td>
-                <td><button id="celledhex"></button></td>
-              </tr>
-            </table>
+            <div class="symbolButtons-wrapper">
+              <table id="symbolButtons" style="padding: 5px; display:none" cellpadding="4" cellspacing="0">
+                <colgroup>
+                  <col span="4" id="colLess" style="visibility: visible;">
+                  <col span="4" id="colMore" style="visibility: collapse;">
+                </colgroup>
+                <tr>
+                  <td><button id="start"></button></td>
+                  <td><button id="end"></button></td>
+                  <td><button id="gap"></button></td>
+                  <td><button id="line"></button></td>
+                  <td id="x-fakebutton" style="display: none;">
+                    <div id="x-fakewrapper">
+                      <div id="x-fakesvg"></div>
+                      <table>
+                        <tr>
+                          <td><button id="x-lu"></button></td>
+                          <td><button id="x-ru"></button></td>
+                        </tr>
+                        <tr>
+                          <td><button id="x-ld"></button></td>
+                          <td><button id="x-rd"></button></td>
+                        </tr>
+                      </table>
+                    </div>
+                  </td>
+                  <td><button id="none"></button></td>
+                  <td><button id="none"></button></td>
+                  <td><button id="none"></button></td>
+                </tr>
+                <tr>
+                  <td><button id="dot"></button></td>
+                  <td><button id="CrossCurve"></button></td>
+                  <td><button id="dots"></button></td>
+                  <td><button id="eye"></button></td>
+                  <td><button id="none"></button></td>
+                  <td><button id="none"></button></td>
+                  <td><button id="none"></button></td>
+                  <td><button id="none"></button></td>
+                </tr>
+                <tr>
+                  <td><button id="squareToPentagon"></button></td>
+                  <td><button id="star"></button></td>
+                  <td><button id="pokerchip"></button></td>
+                  <td><button id="swirl"></button></td>
+                  <td><button id="crystal"></button></td>
+                  <td><button id="none"></button></td>
+                  <td><button id="none"></button></td>
+                  <td><button id="none"></button></td>
+                </tr>
+                <tr>
+                  <td><button id="triangle"></button></td>
+                  <td><button id="vtriangle"></button></td>
+                  <td><button id="arrow"></button></td>
+                  <td><button id="dart"></button></td>
+                  <td><button id="atriangle"></button></td>
+                  <td><button id="none"></button></td>
+                  <td><button id="none"></button></td>
+                  <td><button id="none"></button></td>
+                </tr>
+                <tr>
+                  <td style="display: table-cell;"><button id="nega" disabled></button></td>
+                  <td><button id="bridge"></button></td>
+                  <td><button id="portal"></button></td>
+                  <td><button id="divdiamond"></button></td>
+                  <td style="display: none;"><button id="copier" disabled></button></td>
+                  <td><button id="celledhex"></button></td>
+                  <td><button id="whiteAndBlackHole"></button></td>
+                  <td><button id="none"></button></td>
+                </tr>
+                <tr>
+                  <td><button id="poly"></button></td>
+                  <td><button id="ylop"></button></td>
+                  <td><button id="xvmino"></button></td>
+                  <td><button id="polynt"></button></td>
+                  <td><button id="scaler"></button></td>
+                  <td><button id="dice"></button></td>
+                  <td><button id="sizer"></button></td>
+                  <td><button id="twobytwo"></button></td>
+                </tr>
+                <tr>
+                  <td colspan="4"><div class="hlist"><button class="center" id="more" onclick="seeMore()" style="flex: 1 0 auto; display: unset;">See More</button></div></td>
+                  <td colspan="4"><div class="hlist"><button class="center" id="less" onclick="seeLess()" style="flex: 1 0 auto; display: none;">Back</button></div></td>
+                </tr>
+              </table>
+            </div>
             <div class="spacer"></div>
             <div class="hlist editor-puzzlebox">
               <div class="puzzlebox-wrapper">
