fix: better mobile support

--- a/play.html
+++ b/play.html
@@ -19,7 +19,7 @@
     <script async type="text/javascript" src="./play.js"></script>
     <title>Looksy v2.2.0</title>
   </head>
-  <body style="overflow: hidden;">
+  <body class="playfield">
     <div class="wrapper">
       <header id="header" class="vlist">
         <button id="header-plus-button" onclick="toggleExpand()"><i id="header-plus" class="xi-plus"></i></button>
