--- a/editor.html
+++ b/editor.html
@@ -152,8 +152,8 @@
                   <td><button id="portal"></button></td>
                   <td><button id="divdiamond"></button></td>
                   <td><button id="copier" disabled></button></td>
-                  <td><button id="celledhex"></button></td>
                   <td><button id="whiteAndBlackHole"></button></td>
+                  <td><button id="none"></button></td>
                   <td><button id="none"></button></td>
                 </tr>
                 <tr>
@@ -164,7 +164,7 @@
                   <td><button id="scaler"></button></td>
                   <td><button id="dice"></button></td>
                   <td><button id="sizer"></button></td>
-                  <td><button id="twobytwo"></button></td>
+                  <td><button id="none"></button></td>
                 </tr>
                 <tr>
                   <td id="more-wrapper" colspan="4"><div class="hlist"><button class="center" id="more" onclick="seeMore()" style="flex: 1 0 auto;">See More</button></div></td>
