--- a/editor.html
+++ b/editor.html
@@ -24,28 +24,32 @@
 
 <body>
   <div class="wrapper">
-    <header id="header" class="vlist">
-      <button id="header-plus-button" onclick="toggleExpand()"><i id="header-plus" class="xi-plus"></i></button>
-      <div id="header-expand">
-        <br>
-        <div class="hlist">
-          <div class="header-slider vlist">
-            <label for="sens">Mouse Speed</label>
-            <input id="sens" type="range" min='0.1' max='1.3' step='0.1' value='0.7'></input>
+    <div class="hlist">
+      <div class="spacer"></div>
+      <a href='./index.html'><svg id="mainMenu" viewbox="0 0 64 64" style="width: 64px; height: 64px;"><path fill="var(--text)" transform="translate(32, 32)" d="M -24 0 Q 0 -24 24 0 Q 0 24 -24 0 Q 0 12 24 0 Q 0 -12 -24 0 M 0 -6 L -2 -4 L -4 -4 L -4 -2 L -6 0 L -4 2 L -4 4 L -2 4 L 0 6 L 2 4 L 4 4 L 4 2 L 6 0 L 4 -2 L 4 -4 L 2 -4z"></path></svg></a>
+      <header id="header" class="vlist">
+        <button id="header-plus-button" onclick="toggleExpand()"><i id="header-plus" class="xi-plus"></i></button>
+        <div id="header-expand">
+          <br>
+          <div class="hlist">
+            <div class="header-slider vlist">
+              <label for="sens">Mouse Speed</label>
+              <input id="sens" type="range" min='0.1' max='1.3' step='0.1' value='0.7'></input>
+            </div>
+            <div class="header-slider vlist">
+              <label for="volume">Volume</label>
+              <input id="volume" type="range" min='0' max='1' step='0.02' value='0.12'></input>
+            </div>
           </div>
-          <div class="header-slider vlist">
-            <label for="volume">Volume</label>
-            <input id="volume" type="range" min='0' max='1' step='0.02' value='0.12'></input>
+          <div class="vlist">
+            <label for="symboltheme">Symbol Set</label>
+            <input id="symboltheme" type="button" value='Canonical' onclick="changeTheme()"></input>
           </div>
+          <br>
         </div>
-        <div class="vlist">
-          <label for="symboltheme">Symbol Set</label>
-          <input id="symboltheme" type="button" value='Canonical' onclick="changeTheme()"></input>
-        </div>
-        <br>
-      </div>
-    </header>
-    <!-- <script>loadHeader('Creating puzzle')</script> -->
+      </header>
+      <div class="spacer"></div>
+    </div>
     <div class="main-wrapper">
       <div class="main">
         <div class="vlist" id="meta" class="noselect">
@@ -328,6 +332,14 @@
               <li>
                 <h2>Background Music</h2>
                 <input onchange="changeImage(this.id, this.value)" type="text" id="background-music-input" />
+              </li>
+              <li>
+                <h2>Veil Image (disappears when drawing)</h2>
+                <input onchange="changeImage(this.id, this.value)" type="text" id="veil-image-input" />
+              </li>
+              <li>
+                <h2>Cursor Image</h2>
+                <input onchange="changeImage(this.id, this.value)" type="text" id="cursor-image-input" />
               </li>
               <li style="margin: 16px;">
                 <button id="export-theme" class="theme-button" onpointerdown="exportTheme()">Export to Clipboard</button>
