--- a/play.html
+++ b/play.html
@@ -21,27 +21,32 @@
   </head>
   <body class="playfield">
     <div class="wrapper">
-      <header id="header" class="vlist">
-        <button id="header-plus-button" onclick="toggleExpand()"><i id="header-plus" class="xi-plus"></i></button>
-        <div id="header-expand">
-          <br>
-          <div class="hlist">
-            <div class="header-slider vlist">
-              <label for="sens">Mouse Speed</label>
-              <input id="sens" type="range" min='0.1' max='1.3' step='0.1' value='0.7'></input>
+      <div class="hlist">
+        <div class="spacer"></div>
+        <a href='./index.html'><svg id="mainMenu" viewbox="0 0 64 64" style="width: 64px; height: 64px;"><path fill="var(--text)" transform="translate(32, 32)" d="M -24 0 Q 0 -24 24 0 Q 0 24 -24 0 Q 0 12 24 0 Q 0 -12 -24 0 M 0 -6 L -2 -4 L -4 -4 L -4 -2 L -6 0 L -4 2 L -4 4 L -2 4 L 0 6 L 2 4 L 4 4 L 4 2 L 6 0 L 4 -2 L 4 -4 L 2 -4z"></path></svg></a>
+        <header id="header" class="vlist">
+          <button id="header-plus-button" onclick="toggleExpand()"><i id="header-plus" class="xi-plus"></i></button>
+          <div id="header-expand">
+            <br>
+            <div class="hlist">
+              <div class="header-slider vlist">
+                <label for="sens">Mouse Speed</label>
+                <input id="sens" type="range" min='0.1' max='1.3' step='0.1' value='0.7'></input>
+              </div>
+              <div class="header-slider vlist">
+                <label for="volume">Volume</label>
+                <input id="volume" type="range" min='0' max='1' step='0.02' value='0.12'></input>
+              </div>
             </div>
-            <div class="header-slider vlist">
-              <label for="volume">Volume</label>
-              <input id="volume" type="range" min='0' max='1' step='0.02' value='0.12'></input>
+            <div class="vlist">
+              <label for="symboltheme">Symbol Set</label>
+              <input id="symboltheme" type="button" value='Canonical' onclick="changeTheme()"></input>
             </div>
+            <br>
           </div>
-          <div class="vlist">
-            <label for="symboltheme">Symbol Set</label>
-            <input id="symboltheme" type="button" value='Canonical' onclick="changeTheme()"></input>
-          </div>
-          <br>
-        </div>
-      </header>
+        </header>
+        <div class="spacer"></div>
+      </div>
       <div class="main-wrapper">
         <div class="main vlist">
             <div class="spacer"></div>
