--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 </div>
               </div>
             </div>
+            <button onpointerdown="resetProgress()">Reset Progress</button>
             <div class="spacer"></div>
         </div>
       </div>
