--- a/play.html
+++ b/play.html
@@ -17,7 +17,7 @@
     <script async type="text/javascript" src="./engine/display2.js"></script>
     <script async type="text/javascript" src="./engine/trace2.js"></script>
     <script async type="text/javascript" src="./play.js"></script>
-    <title>Looksy v2.2.1</title>
+    <title>Looksy v2.3.0</title>
   </head>
   <body class="playfield">
     <div class="wrapper">
@@ -50,6 +50,7 @@
       <div class="main-wrapper">
         <div class="main vlist">
             <div class="spacer"></div>
+            <button class="nav" onclick="getNext(2)" id="nextC" style="opacity: 0;"><i class="xi-angle-up"></i></button>
             <div class="hlist" id="solsWrapper"></div>
             <div class="hlist">
               <button class="nav" onclick="getPrev()" id="prev" style="opacity: 0;"><i class="xi-angle-left"></i></button>
@@ -61,6 +62,7 @@
               <button class="nav" onclick="getNext()" id="next" style="opacity: 0;"><i class="xi-angle-right"></i></button>
             </div>
             <div class="hlist" id="perfectWrapper"></div>
+            <button class="nav" onclick="getNext(1)" id="nextB" style="opacity: 0;"><i class="xi-angle-down"></i></button>
             <div class="spacer"></div>
         </div>
       </div>
